Arrumando github actions

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -28,7 +28,10 @@ jobs:
       
     - name: Compile
       run: make
-      
+
+    - name: Permission
+      run: chmod 777 ./run_tests.sh
+    
     - name: Run
       run: ./run_tests.sh
       
